--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <body>
 
         <h1>T3 Archive</h1> 
+        
+        <h4><a href="https://github.com/awesomeplaya211/T3-Archive">GitHub</a></h4>
 
         <p>sorry my html and javascript isnt as good as my python lol</p>
 
