Made subpages + cool roster chart

--- a/scrims/scrims.html
+++ b/scrims/scrims.html
@@ -6,7 +6,7 @@
 
         <title>T3 Archive</title>
 
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="scrims.css">
 
     </head>
     <body>
@@ -15,15 +15,21 @@
         
         <h4><a href="https://github.com/awesomeplaya211/T3-Archive">GitHub</a></h4>
 
-        <p>sorry my html and javascript isnt as good as my python lol</p>
-
         <h4>
 
-            <a href="roster/roster.html">Roster</a>
+            <a href="../index.html">Home</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="scrims/scrims.html">Scrims</a>
+            <a href="../roster/roster.html">Roster</a>
 
         </h4>
+
+        <!-- <p>sorry my html and javascript isnt as good as my python lol</p> -->
+
+        <div id="scrims">
+
+        </div>
+
+        <script type="module" src="scrims.js"> </script>
     
     </body>
 </html>
