Fixed GitHub links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <h1>T3 Archive</h1> 
         
-        <h4><a href="https://github.com/awesomeplaya211/T3-Archive">GitHub</a></h4>
+        <h4><a href="https://github.com/awesomeplaya211/T3-Archive" target="_blank">GitHub</a></h4>
 
         <p>sorry my html and javascript isnt as good as my python lol</p>
 
