Updated README and added RGL

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
         <h4>
 
+            <a href="https://rgl.gg/Public/Team.aspx?t=9886" target="_blank">RGL</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="roster/roster.html">Roster</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="scrims/scrims.html">Scrims</a>
