--- a/roster/roster.html
+++ b/roster/roster.html
@@ -16,7 +16,9 @@
         <h4><a href="https://github.com/awesomeplaya211/T3-Archive" target="_blank">GitHub</a></h4>
 
         <h4>
-
+            
+            <a href="https://rgl.gg/Public/Team.aspx?t=9886" target="_blank">RGL</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="../index.html">Home</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="../scrims/scrims.html">Scrims</a>
