--- a/scrims/scrims.html
+++ b/scrims/scrims.html
@@ -17,6 +17,8 @@
 
         <h4>
 
+            <a href="https://rgl.gg/Public/Team.aspx?t=9886" target="_blank">RGL</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="../index.html">Home</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="../roster/roster.html">Roster</a>
